--- a/Makefile.engine
+++ b/Makefile.engine
@@ -2,6 +2,7 @@ ASSEMBLY  = engine
 BUILD_DIR = bin
 COMPILER_FLAGS = -Wall -Werror -Wvla -Werror=vla -Wgnu-folding-constant -Wno-missing-braces -fdeclspec -fPIC
 DEFINES = -dynamiclib -fvisibility=hidden -DKEXPORT
+GLFW_SDK = /opt/homebrew/Cellar/glfw/3.3.8
 
 # WINDOWS --------------------------------------------------------------------
 ifeq ($(OS), Windows_NT)
@@ -21,9 +22,8 @@ else
 		SRC_FILES = $(shell find $(ASSEMBLY) -type f \( -name "*.c" -o -name "*.m" \))
 		BUILD_PLATFORM = macos
 		EXTENSION = .dylib 
-		
-		INCLUDE_FLAGS = -I/engine/src
-		LINKER_FLAGS = -lvulkan
+		INCLUDE_FLAGS = -I/engine/src -I$(GLFW_SDK)/include
+		LINKER_FLAGS = -lvulkan -lglfw -L$(GLFW_SDK)/lib
 	endif
 endif
 
