--- a/Makefile.executable
+++ b/Makefile.executable
@@ -1,12 +1,15 @@
-BUILD_DIR = bin
+BUILD_DIR = build
 ASSEMBLY  = testbed
 COMPILER_FLAGS = -g -shared -fdeclspec -fPIC
 DEFINES =
 ENGINE_LINK = -lengine
 
+GLFW_SDK = /opt/homebrew/Cellar/glfw/3.3.8
+VULKAN_SDK = /Users/romainpelle/VulkanSDK/1.3.231.1/macOS
+
 SRC_FILES = $(shell find $(ASSEMBLY) -name *.c)
-INCLUDE_FLAGS = -Iengine/src -I$(ASSEMBLY)/src -I$(GLFW_SDK)/include
-LINKER_FLAGS = -L./$(BUILD_DIR) $(ENGINE_LINK) -Wl,-rpath,. -L$(GLFW_SDK)/lib -lglfw
+INCLUDE_FLAGS = -Iengine/src -I$(ASSEMBLY)/src -I$(GLFW_SDK)/include -L$(VULKAN_SDK)/include -L$(VULKAN_SDK)/include
+LINKER_FLAGS = -L./$(BUILD_DIR) $(ENGINE_LINK) -Wl,-rpath,. -L$(GLFW_SDK)/lib -lglfw  -lvulkan -L$(VULKAN_SDK)/lib
 
 #TODO: should not have to pass glfw here if I'm correct... (i don't need explicit vulkan so...)
 
@@ -35,6 +38,7 @@ DEFINES += -D_DEBUG
 COMPILER_FLAGS += -g -MD
 LINKER_FLAGS += -g
 
+.PHONY: build
 build: 
 	@echo "compiling $(ASSEMBLY) for $(BUILD_PLATFORM)"
 	@mkdir -p $(BUILD_DIR)
